<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textviews"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/vendorname" />

        <TextView
            android:id="@+id/textvender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textviews"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2"
        android:layout_below="@+id/layout1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textutname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/utilityname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textinput1"
        app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rate" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>