<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeimg"
    tools:context=".FirstActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="164dp"
        android:background="@color/colorblack"
        app:cardBackgroundColor="@color/greenlight"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="94dp"
        android:background="@color/colorblack"
        app:cardBackgroundColor="@color/greenlight"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/signupadmn"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="37dp"
        android:background="@color/colorblack"
        app:cardBackgroundColor="@color/greenlight"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/signupuser"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

</RelativeLayout>