<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/teabackg"
    tools:context=".AddUtilityFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardview"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorblack"
                    android:text="@string/vendorname" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:popupBackground="@color/colorwhit"
                    android:background="@drawable/spinner_border"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textviews"
                android:layout_marginTop="5dp"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2"
                android:layout_below="@+id/layout1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textutility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/utilityname"
                    android:inputType="text"
                    android:textColor="@color/colorblack" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textinput1"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rate"
                    android:inputType="number"
                    android:textColor="@color/colorblack" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="2dp"
        android:background="@color/colorblack"
        app:cardBackgroundColor="@color/colorcardback"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/vender_button"
            android:textAlignment="center"
            android:textColor="@color/colorwhit"
            android:textSize="18dp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

</RelativeLayout>