<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistActivity"
    android:background="@drawable/teabackg"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/headtext"
        android:text="User Registration"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorblack"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardview"
        android:layout_below="@+id/headtext">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview"
                android:id="@+id/textinputlayout"
                android:layout_marginTop="15dp"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editnames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textinputlayout"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editcont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileno"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                android:layout_below="@+id/textinputlayout2">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Gender"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorblack"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="Female" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_below="@+id/radiogroup"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorblack"
                    android:text="Admin or Office" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:popupBackground="@color/colorwhit"
                    android:background="@drawable/spinner_border"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:layout_marginTop="5dp"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/paswordtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textinput3"
                android:layout_marginTop="5dp"
                app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordretyp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>



    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/colorblack"
        app:cardBackgroundColor="@color/colorcardback"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/colorwhit"
            android:textSize="16dp"
            android:textStyle="bold"/>

    </android.support.v7.widget.CardView>

</RelativeLayout>