<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:srcCompat="@drawable/officedialogo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>


    <android.support.v7.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView3"
        android:background="#000000"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#262323"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextAppearance.App.TextInputLayout">


            <EditText
                android:id="@+id/textuname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="#ffffff"
                android:drawableStart="@drawable/ic_action_user"
                android:layout_marginTop="10dp"
                android:hint="@string/mobileno"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#000000"
        app:cardBackgroundColor="#262323"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/textpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="#ffffff"
                android:drawableStart="@drawable/ic_action_pass"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardview1"
        android:layout_below="@+id/cardview2"
        android:text="Show"
        android:textSize="18sp"
        android:buttonTint="#E5226C"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview2"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        app:cardBackgroundColor="#E5226C"
        app:cardCornerRadius="19dp"
        app:cardElevation="6dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#faf9f9"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>



    <!-- <Button
         android:id="@+id/buttonregister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cardview3"
         android:layout_centerHorizontal="true"
         android:textSize="17sp"
         android:background="@android:color/transparent"
         android:textColor="#000000"
         android:text="@string/signup"
         android:textStyle="bold"/>-->

</RelativeLayout>